<resources>
    <string name="app_name">手机拔河</string>
    <string name="login">登录</string>
    <string name="signin">注册</string>
    <string name="username">用户名</string>
    <string name="passwd">密码</string>
    <string name="eusername">username</string>
    <string name="epasswd">passwd</string>
    <string name="createroom">创建房间</string>
    <string name="joinroom">加入房间</string>
    <string name="history">我的/历史战绩</string>
    <string name="signin_failed">注册失败</string>
    <string name="isnull">null</string>
    <string name="userid">用户ID</string>
    <string name="roomid">房间号</string>
    <string name="roomcount">当前房间人数</string>
    <string name="redteam">红队</string>
    <string name="blueteam">蓝队</string>
    <string name="playing">开始对战</string>
    <string name="zero">0</string>
    <string name="mycount">我的摇摆次数</string>
    <string name="redcount">红队次数</string>
    <string name="bluecount">蓝队次数</string>
    <string name="thirtyseconds">30</string>
    <string name="select_team">请选择队伍</string>
    <string name="joingame">加入游戏</string>
    <string name="historylog">历史战绩</string>
    <string name="returnmain">返回主界面</string>
    <string name="viewhistory">查看历史战绩</string>
    <string name="win">胜</string>
    <string name="lose">败</string>
    <string name="mytitle">我的称号</string>
    <string name="meancount">平均摇摆次数</string>
    <string name="mywincount">我的胜场次数</string>
    <string name="mywinradio">我的胜率</string>
    <string name="historybattle">历史对战记录</string>
    <string name="result">对战结果</string>
    <string name="one1000">10000</string>
</resources>
