<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/join_room"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/preview_"
    tools:context=".JoinRoomActivity">


    <RelativeLayout
        android:id="@+id/name_break"
        android:layout_width="wrap_content"
        android:layout_height="300dp">
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/join_name"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/name_break"
        android:layout_height="80dp">

        <ImageView
            android:id="@+id/join_room_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="50dp"
            android:layout_centerVertical="true"
            android:src="@drawable/room" />

        <TextView
            android:id="@+id/join_room_roomid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/join_room_img"
            android:textSize="20sp"
            android:text="@string/roomid" />

        <EditText
            android:id="@+id/join_room_roomid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/join_room_roomid_text"
            android:layout_marginRight="40dp"
            android:text="@string/zero" />
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/joinroom_u"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="@+id/join_room"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:id="@+id/name_break_two"
            android:layout_width="50dp"
            android:layout_height="40dp">
        </RelativeLayout>

        <RadioGroup
            android:layout_toRightOf="@+id/name_break_two"
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/join_room_selectteam_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/select_team" />

            <RadioButton
                android:id="@+id/join_room_redteam_radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/redteam" />

            <RadioButton
                android:id="@+id/join_room_blueteam_radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blueteam" />
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/room_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/joinroom_u"
        android:layout_marginBottom="50dp"
        android:background="@color/White"
        >

        <ImageView
            android:id="@+id/joinroom_break"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/White"/>

        <ImageView
            android:id="@+id/joinroom_one"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_toRightOf="@+id/joinroom_break"
            android:background="@drawable/one" />

        <Button
            android:id="@+id/join_room_joinroom"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/joinroom_one"
            android:background="@color/White"
            android:text="@string/joingame" />
    </RelativeLayout>

    <TextView
        android:id="@+id/join_room_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</android.support.constraint.ConstraintLayout>