<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/result_text_lose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="42dp"
            android:text="@string/lose"
            android:textColor="@color/ff3b30"
            android:textSize="30dp" />

        <ImageView
            android:id="@+id/image_result_lose"
            android:layout_width="312dp"
            android:layout_height="248dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="30dp"
            app:srcCompat="@drawable/img_lose" />

        <Button
            android:id="@+id/return_main_lose"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="355dp"
            android:text="@string/returnmain" />

        <Button
            android:id="@+id/view_history_lose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="355dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"

            android:text="@string/viewhistory" />
    </RelativeLayout>
</LinearLayout>
