<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyHistoryActivity"
    android:background="@drawable/history"
    android:id="@+id/history">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/myhistory_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/historylog"
            android:textSize="30dp" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mytitle"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/his_mytitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/meancount"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/his_mycount"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mywincount"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/his_mywincount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mywinradio"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/his_mywinradio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </TableRow>

        <TableRow>

        </TableRow>

    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/history"
        >

        <RelativeLayout
            android:id="@+id/history_table"
            android:layout_width="279dp"
            android:layout_height="128dp"
            android:layout_centerInParent="true">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="88dp"
               >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="71dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/roomid"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/mycount"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="93dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/result"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/his_roomid1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/his_mycount1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/his_result1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/his_roomid2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/his_mycount2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/his_result2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/his_roomid3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/his_mycount3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/his_result3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center" />
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/White"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toBottomOf="@+id/history">

        <ImageView
            android:id="@+id/mian_one"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="45dp"
            android:background="@color/White"
            android:src="@drawable/main" />

        <Button
            android:id="@+id/his_returnmain"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@+id/mian_one"
            android:background="@color/White"
            android:text="@string/returnmain"
            android:textSize="18sp" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>